--- a/index.html
+++ b/index.html
@@ -15,8 +15,9 @@
         <h3>2025</h3>
     </div>
 
-    <a href="main.html" target="_blank">Abrir</a>
-
+    <a href="main.html" target="_blank" id="btnAbrir">Abrir</a>
+    <audio autoplay="" src="res/its_timeee.mp3" id="its_timeee"></audio>
+    <script src="scripts/script.js"></script>
 </body>
 
 </html>
