--- a/main.html
+++ b/main.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Deseos</title>
     <link rel="stylesheet"
-        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200&icon_names=play_pause" />
+        href="https://fonts.googleapis.com/css2?family=Material+Symbols+Outlined:opsz,wght,FILL,GRAD@20..48,100..700,0..1,-50..200" />
     <link rel="stylesheet" href="main_style.css">
 </head>
 
@@ -16,12 +16,13 @@
                 class="span1">regalos</span>!</p>
         <button class="play-pause" id="btnMusic">
             <div class="ball" id="musicBall">
-                <span class="material-symbols-outlined">play_pause</span>
+                <span class="material-symbols-outlined" id="icon">play_arrow</span>
                 <div class="thread"></div>
                 <div class="hook"></div>
                 <div class="inner-shine"></div>
             </div>
         </button>
+        <p class="msgMusica">← <span class="music">♫</span></p>
     </header>
 
     <div class="content">
@@ -33,7 +34,9 @@
             <label for="toggle-ball0" class="click-area"></label>
             <div class="hook"></div>
             <div class="inner-shine"></div>
-            <div class="message">Aprender a conducir</div>
+            <div class="message">Aprender a conducir
+                <span class="material-symbols-outlined">no_crash</span>
+            </div>
         </div>
         <!------------------------------------------------------------ BOLA 1 -->
         <div class="ball" id="ball1">
@@ -43,7 +46,9 @@
 
             <div class="hook"></div>
             <div class="inner-shine"></div>
-            <div class="message">Familia feliz etc</div>
+            <div class="message">Familia feliz etc
+                <span class="material-symbols-outlined">family_group</span>
+            </div>
         </div>
         <!------------------------------------------------------------ BOLA 2 -->
         <div class="ball" id="ball2">
@@ -53,7 +58,9 @@
 
             <div class="hook"></div>
             <div class="inner-shine"></div>
-            <div class="message">Gatos fuertes y sanos</div>
+            <div class="message">Gatos sanos y fuertes
+                <span class="material-symbols-outlined">pets</span>
+            </div>
         </div>
         <!------------------------------------------------------------ BOLA 3 -->
         <div class="ball" id="ball3">
@@ -63,7 +70,9 @@
 
             <div class="hook"></div>
             <div class="inner-shine"></div>
-            <div class="message">Que me toque la lotería (ya va tocando)</div>
+            <div class="message">Que me toque la lotería (ya va tocando)
+                <span class="material-symbols-outlined">assured_workload</span>
+            </div>
         </div>
         <!------------------------------------------------------------ BOLA 4 -->
         <div class="ball" id="ball4">
@@ -73,7 +82,10 @@
 
             <div class="hook"></div>
             <div class="inner-shine"></div>
-            <div class="message">Nada más. Muchas gracias jojojo!</div>
+            <div class="message">Nada más. Muchas gracias jojojo!
+                <span class="material-symbols-outlined">
+                    person_heart</span>
+            </div>
         </div>
         <p class="autor">Ayur S.L 2050</p>
     </div>
